tests/NormalTests/paczka1/small_fuzzy/68533200.err
Error in line 5: BTqdA A400 86,4
Error in line 2: raR6G A106 46,9
